--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,5 +8,11 @@ jobs:
     steps:
      - name: pulling git repo
        uses: actions/checkout@v2
-     - name: say hi to chris
-       run: echo "hello chris"
+     - name: Install python version 3.10
+       uses: action/setup-python@v2
+       with:
+         python-version: "3.10"
+     - name: update pip
+       run: python -m pip install --upgrade pip
+     - name: install all dependencies
+       run: pip install -r requirements.txt
