--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
-        uses: actions/setup-python@v4
+        uses: actions/checkout@v2
       - name: Install python version 3.10
-        uses: action/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: update pip
